#6642 Matrix wrong paddings - fix table-layout Fixes #6642

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -485,3 +485,6 @@
     margin: auto;
   }
 }
+.sd-table.sd-matrixdynamic {
+  table-layout: auto;
+}
